# rayitos

./: Cargo.toml  README.md
src/: hittables.rs  image.rs  lib.rs  main.rs  ppm.rs  ray.rs  renderers.rs  rng.rs  vector.rs
