[package]
name = "rayitos"
version = "0.0.1"
authors = ["Enrique Tebari Barragan Corte <tebari@tebari.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[lib]
name = "rayitolib"
path = "src/lib.rs"

[[bin]]
name = "rayitos"
path = "src/main.rs"